# plantcad-dev

./: .gitignore  .pre-commit-config.yaml  README.md  fabfile.py  minimal_inference.py  pyproject.toml
.cursor/plans/: pcad1-model-metrics-analysis.plan.md
.cursor/rules/: defaults.mdc
.github/workflows/: ci.yml  lint.yml  pc2-eval.yml
configs/pipelines/plantcad2/evaluation/: config-exp33.yaml  config-exp35.yaml  config-exp36.yaml  config.yaml
configs/skypilot/: cluster.sky.yaml  task.sky.yaml
experiments/maize_allele_frequency_eda/: README.md  requirements.txt
experiments/maize_allele_frequency_eda/config/: config.yaml
experiments/maize_allele_frequency_eda/workflow/: Snakefile
experiments/maize_allele_frequency_eda/workflow/notebooks/: eda.py
experiments/maize_allele_frequency_eda/workflow/rules/: common.smk  models.smk  subsampling.smk
experiments/maize_genomic_prediction_eval/: PLAN.md  README.md  eval_baseline_G0.R  eval_null_random.R  eval_score_model.R  requirements.txt
experiments/maize_genomic_prediction_eval/config/: config.yaml
experiments/maize_genomic_prediction_eval/workflow/: Snakefile
experiments/maize_genomic_prediction_eval/workflow/envs/: r-reml.yaml
experiments/maize_genomic_prediction_eval/workflow/rules/: common.smk  model.smk  plot.smk  reml.smk
experiments/maize_genomic_prediction_eval/workflow/scripts/: eval_baseline_G0.R  eval_score_model.R  extract_variant_coords.R  score_hf_llr.py
experiments/maize_msa/config/: chrom.sizes  config.yaml  neutral.mod
experiments/maize_msa/workflow/rules/: msa.smk
scripts/: ray_init.sh  ray_run.sh  setup-github-secrets.sh
snakemake/maize_allele_frequency_eval/: README.md  requirements.txt
snakemake/maize_allele_frequency_eval/config/: config.yaml
snakemake/maize_allele_frequency_eval/dataset/: README.md  requirements.txt
snakemake/maize_allele_frequency_eval/dataset/config/: config.yaml  hf_readme.md
snakemake/maize_allele_frequency_eval/dataset/workflow/: Snakefile
snakemake/maize_allele_frequency_eval/dataset/workflow/rules/: common.smk  ensembl.smk
snakemake/maize_allele_frequency_eval/eda/: README.md  requirements.txt
snakemake/maize_allele_frequency_eval/eda/config/: config.yaml
snakemake/maize_allele_frequency_eval/eda/workflow/: Snakefile
snakemake/maize_allele_frequency_eval/eda/workflow/notebooks/: eda.py
snakemake/maize_allele_frequency_eval/eda/workflow/rules/: common.smk  metrics.smk  models.smk  subsampling.smk
snakemake/maize_allele_frequency_eval/workflow/: Snakefile
snakemake/maize_allele_frequency_eval/workflow/notebooks/: eda.py
snakemake/maize_allele_frequency_eval/workflow/rules/: model.smk
snakemake/maize_msa/: .gitignore  README.md  env.yaml
snakemake/maize_msa/config/: config.yaml  hf_readme.md  tree.nh  tree_topology.nh
snakemake/maize_msa/workflow/: Snakefile
snakemake/maize_msa/workflow/envs/: mafTools.yaml
snakemake/maize_msa/workflow/rules/: common.smk  conservation.smk  msa.smk
src/: __init__.py  constants.py  debug.py  exec.py  flow.py  hub.py  io.py  log.py  zero-shot-eval.py  zero_shot_eval.py
src/execution/: slurm.py
src/io/: api.py  fs.py  hf.py  s3.py
src/pipelines/examples/: docker_bedtools_step.py  gff_pipeline.py  nested_flow_child.py  nested_flow_parent.py  thalas_test.py
src/pipelines/maize_allele_frequency_dataset/: README.jinja  config.py  pipeline.py
src/pipelines/maize_allele_frequency_dataset/configs/: config.yaml
src/pipelines/maize_genomic_prediction_eval/: eval_baseline_G0.R
src/pipelines/plantcad2/: evaluation.py
src/pipelines/plantcad2/evaluation/: common.py  config.py  config.yaml  core.py  data.py  flow.py  pipeline.py  tasks.py  utils.py
src/pipelines/plantcad2/evaluation/configs/: cluster.sky.yaml  config.yaml  task.sky.yaml
src/pipelines/plantcad2/evaluation/tasks/evolutionary_constraint/: flow.py  pipeline.py
src/pipelines/plantcad2/evaluation/tasks/splice_acceptor/: flow.py
src/pipelines/plantcad2/evaluation_v2/: __init__.py  config.py  pipeline.py
src/pipelines/plantcad2/evaluation_v2/tasks/: zero_shot.py
src/pipelines/reference/: chained_flows.py  evolutionary_constraint.ipynb  evolutionary_constraint.py  gff_pipeline.py
src/tests/: test_io.py
src/tests/pipelines/plantcad2/evaluation/: test_core.py  test_pipeline.py
src/utils/: hf_utils.py  logging_utils.py  pipeline.py  pipeline_utils.py  ray_utils.py
